# paste

./: README.md  package-lock.json  package.json
changelogs/: CHANGELOG_V0.md
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  inject.rs  main.rs  service.rs  setting.rs  store.rs
